# model-router

./: Makefile  README.md
configs/: config.yaml  routes.yaml
deployments/: docker-compose.yaml
docs/api/: router.swagger.json
proto/: router.proto
scripts/: generate-proto.sh  test-route.sh
services/embedding/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
services/router/: go.mod  go.sum
services/router/cmd/seed/: main.go
services/router/cmd/server/: main.go
services/router/pkg/pb/: router.pb.go  router.pb.gw.go  router_grpc.pb.go
